feat: add API function logs to log viewer page - modify zap logger to log to both file and console - fix WebSocket client termination logic
